--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
           <input type="hidden" id="pensamento-id" />
           <label for="pensamento-conteudo">Pensamento</label>
           <textarea 
-            id="pensamento-conteudo" 
-            placeholder="Digite seu pensamento" 
+            id="pensamento-conteudo" placeholder="Digite seu pensamento"
             required>
-          </textarea>
+        </textarea>
           <label 
             for="pensamento-autoria">
               Autoria ou Fonte
@@ -62,6 +61,10 @@
       <span></span>
       <section id="lista-pensamentos-container">
         <h3>Meu Mural</h3>
+        <section id="busca-container">
+          <input type="text" id="campo-busca" placeholder="O que você procura?">
+          <img class="lupa" src="./assets/imagens/lupa.png">
+        </section>
         <div id="mensagem-vazia" class="mensagem-vazia">
           <img src="./assets/imagens/lista-vazia.png" alt="Nenhum pensamento disponível">
           <p>Nada por aqui ainda, que tal compartilhar alguma ideia?</p>
